# mofsim-bench

./: .gitignore  README.md  pyproject.toml
mof_benchmark/: __init__.py
mof_benchmark/analysis/: Overview.py  run_analysis.sh
mof_benchmark/analysis/bulk_modulus/: __init__.py  bulk_modulus.py
mof_benchmark/analysis/common/: utils.py
mof_benchmark/analysis/dft_data/: 1st_2nd_final_filter_good_bulk_modulus_calc_info_combined.csv
mof_benchmark/analysis/dft_data/set_1/: opt_AFR_primitive.cif  opt_AVAKEP02_full_primitive.cif  opt_BUNLAZ_full_primitive.cif  opt_CALOXM13_full_primitive.cif  opt_EKOKUN_full_primitive.cif  opt_FIFFUX_full_primitive.cif  opt_GUPCEA_full_primitive.cif  opt_HIQLIF_full_primitive.cif  opt_HKUST-1_primitive.cif  opt_IPAQOI_full_primitive.cif  opt_IRMOF-10_primitive.cif  opt_LEZTIW_full_primitive.cif  opt_LTA_primitive.cif  opt_LTL_primitive.cif  opt_MD_gmof_AlO6-DPAC_A_No31.cif  opt_MD_tobacco_bor_sym_3_mc_0_sym_4_on_8_L_15.cif  (+37 more)
mof_benchmark/analysis/heat_capacity/: __init__.py  collect_cv_300k.csv  heat_capacity.py
mof_benchmark/analysis/interaction_energy/: interaction_energy.py
mof_benchmark/analysis/optimization/: optimization.py
mof_benchmark/analysis/pages/: 1_Optimization.py  2_Stability.py  3_Bulk_Modulus.py  4_Heat_Capacity.py
mof_benchmark/analysis/plot/: plots.py
mof_benchmark/analysis/stability/: stability.py
mof_benchmark/experiments/scripts/: run_all.sh
mof_benchmark/experiments/structures/: structures.yaml
mof_benchmark/setup/: __init__.py  calculator.py  calculators.yaml  test_calculator.py
(+273 files in other folders)
